<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ncsu.csc.bucketlist.HomePage"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeText"
        android:id="@+id/welcome"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myBucketsBtn"
        android:id="@+id/myBucketsBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newBucketBtn"
        android:id="@+id/newBucketBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exploreMapBtn"
        android:id="@+id/exploreMapBtn"
        android:onClick="exploreMap"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shareBucketsBtn"
        android:id="@+id/shareBucketsBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topBucketsBtn"
        android:id="@+id/topBucketsBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsBtn"
        android:id="@+id/settingsBtn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:onClick="signOutFromGplus"
        android:id="@+id/logout_button" />


</LinearLayout>
