<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ncsu.csc.bucketlist.AddBucket">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_bucketName"
        android:editable="true"
        android:hint="@string/enter_bucket_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_enterLat"
        android:hint="@string/enter_latitude"
        android:editable="true"
        android:layout_below="@+id/editText_bucketName"
        android:layout_alignLeft="@+id/editText_bucketName"
        android:layout_alignStart="@+id/editText_bucketName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_enterLong"
        android:hint="@string/enter_longitude"
        android:editable="true"
        android:layout_below="@+id/editText_enterLat"
        android:layout_alignLeft="@+id/editText_enterLat"
        android:layout_alignStart="@+id/editText_enterLat"
        android:layout_alignRight="@+id/editText_bucketName"
        android:layout_alignEnd="@+id/editText_bucketName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_enterDesc"
        android:editable="true"
        android:hint="@string/enter_bucket_description"
        android:layout_below="@+id/editText_enterLong"
        android:layout_alignLeft="@+id/editText_enterLong"
        android:layout_alignStart="@+id/editText_enterLong" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Bucket!"
        android:id="@+id/button_addBucket"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText_enterDesc"
        android:layout_alignStart="@+id/editText_enterDesc"
        android:layout_marginBottom="41dp"
        android:onClick="onClick_addBucket" />
</RelativeLayout>
